--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "express": "^4.17.1",
     "next": "10.0.2",
+    "next-routes": "^1.4.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
